<resources>
    <string name="app_name">taskKotlin</string>
    <string name="searchContacts">Search contacts</string>
    <string name="addContact">Add contact</string>
    <string name="phoneNumber">Phone number</string>
    <string name="phoneNumber_email">Number/Email</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="editContact">Edit contact</string>
    <string name="remove">Remove</string>
</resources>
